# board_site

./: .gitignore  pyproject.toml
accounts/: forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_useractivatetokens.py  0003_alter_users_managers_users_picture.py
board/: settings.py  urls.py
boards/: forms.py  models.py  urls.py  views.py
boards/migrations/: 0001_initial.py
templates/: base.html
templates/accounts/: activate_user.html  change_password.html  home.html  regist.html  user_edit.html  user_login.html
templates/boards/: create_theme.html  delete_theme.html  edit_theme.html  list_themes.html  post_comments.html
